[gd_scene load_steps=3 format=3 uid="uid://caemshoneox7b"]

[ext_resource type="Script" path="res://scripts/confirmation_box_manager.gd" id="1_0xlnq"]
[ext_resource type="Theme" uid="uid://bi5sl1kglohpl" path="res://assets/themes/light_blue_theme.tres" id="2_jv47q"]

[node name="ConfirmationBox" type="CanvasLayer"]
script = ExtResource("1_0xlnq")

[node name="FullWindow" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundPanelContainer" type="PanelContainer" parent="FullWindow"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.185
anchor_top = 0.35
anchor_right = 0.815
anchor_bottom = 0.5
size_flags_vertical = 3
theme = ExtResource("2_jv47q")

[node name="MarginContainer" type="MarginContainer" parent="FullWindow/BackgroundPanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="FullWindow/BackgroundPanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="InfoTextLabel" type="Label" parent="FullWindow/BackgroundPanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "Press \"Confirm\" to procced."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="FullWindow/BackgroundPanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 100
alignment = 1

[node name="ConfirmButton" type="Button" parent="FullWindow/BackgroundPanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "Confirm"

[node name="CancelButton" type="Button" parent="FullWindow/BackgroundPanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "Cancel"
